<resources>
    <string name="app_name">android2HomeWork3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">Пропустить</string>
    <string name="get_started">Начать работу</string>
    <string name="text_search">Очень удобный функционал</string>
    <string name="very_conveniet_funci">Очень удобный функционал</string>
    <string name="fast_product">Быстрыйб качественный продукт</string>
    <string name="start_work">Начать работу</string>
    <string name="funci_third">Куча функции и интересных фишек</string>
    <string name="shared_preferences_name">app_shared_preferences</string>
    <string name="notes">Заметки</string>
    <string name="search_notes">Поиск заметок</string>
    <string name="search_notes_one">Поиск заметок</string>
    <string name="time">12:45</string>
    <string name="work_spisok">Работы с проектом,сделать домашку,убраться и..</string>
    <string name="data">6 июня</string>
    <string name="have_to_go">Нужно сделать:</string>
    <string name="data_time">6 июня \n 17:10</string>
    <string name="search_notes_on">Поиск заметок</string>
    <string name="may">30 мая</string>
    <string name="sixteen">16:00</string>
    <string name="need_to_do">Ведите заметку:</string>
    <string name="need_to">Поиск заметок:</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="registration_phone_number">Регистрация по номеру</string>
    <string name="phone_number_place_holder_text">+996 --- --- ---</string>
    <string name="phone_number">Номер телефона</string>
    <string name="code_place_holder">Ваш код</string>
    <string name="code_hint">Код</string>
    <string name="get_code">Получить код</string>
    <string name="send_again">Отправить снова</string>
    <string name="filld_error_text">Заоплните поле</string>
</resources>