<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".noteapp.ui.fragment.add.AddNoteFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <ImageView
                android:id="@+id/iv_arrow"
                android:layout_width="20dp"
                android:layout_height="26dp"
                android:background="@color/gray"
                android:src="@drawable/arrow_back" />

            <TextView
                android:id="@+id/tv_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="30dp"
                android:text="@string/may"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="100dp"
                android:text="@string/sixteen"
                android:textColor="@color/gray"
                android:textSize="20sp" />

        </FrameLayout>

        <EditText
            android:id="@+id/et_need_to"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="14dp"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:text="@string/need_to"
            android:textColor="@color/gray"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_need"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="14dp"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:text="@string/need_to_do"
            android:textColor="@color/gray"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:backgroundTint="@color/orange"
        android:hint="@string/one"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btn_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:backgroundTint="@color/gray"
        android:hint="@string/two"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btn_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:backgroundTint="@color/white"
        android:hint="@string/three"
        android:textSize="30sp" />

</FrameLayout>